Added testing of option -v

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,7 @@ script:
       docker push compdatasci/octave-desktop &&
       touch success)'
   # Test script without launching webbrowser and push new image if successful
+  - './octave_desktop.py -d -n -v test_project && docker stop $(docker ps -q)'
   - './octave_desktop.py -d -n && docker stop $(docker ps -q)'
   - './octave_jupyter.py -d -n && docker stop $(docker ps -q)'
   - docker images
