--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ services: docker
 
 env:
   global:
-    OCTAVE_VERSION=4.2.1
-  matrix:
+    - OCTAVE_VERSION=4.2.1
+    - x11vnc/desktop:latest
+matrix:
   - XVFB=1
   - XVFB=0
 
@@ -29,6 +30,7 @@ script:
   - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_USERPASS"
   # Build only if the commit range of a push contains Dockerfile or .travis.yml
   - '[[ "$TRAVIS_EVENT_TYPE" == "push" && -n "$TRAVIS_COMMIT_RANGE" &&
+        -n "$(git log --since `docker inspect $BASE | grep Created | perl -e 's/.+"([\d-:T]+).+$/$1/g' -p`)" &&
         -z "$(git diff --name-only $TRAVIS_COMMIT_RANGE |
             grep -e Dockerfile -e .travis.yml)" ]] || [[ "$XVFB" != "1" ]] ||
      (docker build --build-arg OCTAVE_VERSION=$OCTAVE_VERSION
