--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ script:
         -z "$(git diff --name-only $TRAVIS_COMMIT_RANGE |
             grep -e Dockerfile -e .travis.yml)" ]] ||
      (docker build --build-arg OCTAVE_VERSION=$OCTAVE_VERSION
-                   --tag compdatasci/octave-desktop:BRANCH . &&
-      docker push compdatasci/octave-desktop:BRANCH &&
+                   --tag compdatasci/octave-desktop:$BRANCH . &&
+      docker push compdatasci/octave-desktop:$BRANCH &&
       touch success)'
   # Test script without launching webbrowser and push new image if successful
   - './octave_desktop.py -d -n -t $BRANCH && docker stop $(docker ps -q)'
