--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,7 @@ script:
         -n $(git log --since $(docker inspect $BASE | grep Created | perl -e "s/.+\"([\d-:T]+).+$/\$1/g" -p)) &&
         -z "$(git diff --name-only $TRAVIS_COMMIT_RANGE |
             grep -e Dockerfile -e .travis.yml)" ]] ||
-     (docker build --build-arg CRED="$CRED"
-                   --build-arg OCTAVE_VERSION=$OCTAVE_VERSION
+     (docker build --build-arg OCTAVE_VERSION=$OCTAVE_VERSION
                    --tag compdatasci/octave-desktop:$OCTAVE_VERSION
                    --tag compdatasci/octave-desktop:latest . &&
       docker push compdatasci/octave-desktop &&
