--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,11 @@ os: linux
 language: python
 services: docker
 
-env: OCTAVE_VERSION=4.2.1
-
 before_script:
   - git clone --depth=1 https://$GIT_TOKEN@github.com/xmjiao/ci-util.git
 
 script:
-  - './ci-util/build-docker.sh : :$TRAVIS_BRANCH,$OCTAVE_VERSION,latest --build-arg OCTAVE_VERSION=$OCTAVE_VERSION &&
+  - './ci-util/build-docker.sh : :$TRAVIS_BRANCH,latest &&
      ./octave_desktop.py -t $TRAVIS_BRANCH -d -n -V && docker stop $(docker ps -q) &&
      ./octave_jupyter.py -t $TRAVIS_BRANCH -d -n -V && docker stop $(docker ps -q)'
 
